[project]
name = "montepython-modern-guis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "astynax", email = "astynax@users.noreply.github.com" }
]
dependencies = [
    "fastui>=0.6.0",
    "hyperdiv>=0.1.8",
    "flet == 0.22",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/montepython_modern_guis"]
